// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a TextArea when all the possible props are passed into it 1`] = `
<textarea
  aria-required="true"
  className="textarea"
  cols={15}
  name="description"
  required={true}
  rows={5}
/>
`;

exports[`should render a default TextArea component 1`] = `
<textarea
  className="textarea"
  name={null}
  required={false}
  rows={null}
/>
`;

exports[`should render a full size textbox appropriately 1`] = `
<textarea
  className="textarea full-size"
  name={null}
  required={false}
  rows={null}
/>
`;

exports[`should render a large textbox appropriately 1`] = `
<textarea
  className="textarea"
  name={null}
  required={false}
  rows={null}
/>
`;

exports[`should render a medium textbox appropriately 1`] = `
<textarea
  className="textarea"
  name={null}
  required={false}
  rows={null}
/>
`;

exports[`should render a small textbox appropriately 1`] = `
<textarea
  className="textarea"
  name={null}
  required={false}
  rows={null}
/>
`;

exports[`should render as controlled when just a default value is passed into the Textarea 1`] = `
<Textarea
  isAutoResizable={false}
  isInvalid={false}
  name={null}
  onChange={[Function]}
  required={false}
  rows={null}
  size="small"
  value="foo"
>
  <textarea
    className="textarea"
    name={null}
    onChange={[Function]}
    required={false}
    rows={null}
    value="foo"
  />
</Textarea>
`;

exports[`should render as uncontrolled when just a default value is passed into the Textarea 1`] = `
<Textarea
  defaultValue="foo"
  isAutoResizable={false}
  isInvalid={false}
  name={null}
  required={false}
  rows={null}
  size="small"
>
  <textarea
    className="textarea"
    defaultValue="foo"
    name={null}
    required={false}
    rows={null}
  />
</Textarea>
`;

exports[`should set the onChange and onFocus functions appropriately when the textarea is autoResizable 1`] = `
<textarea
  className="textarea"
  name={null}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  rows={null}
/>
`;

exports[`should set the rows attribute appropriate when it is passed into the textarea 1`] = `
<textarea
  className="textarea"
  name={null}
  required={false}
  rows={7}
/>
`;
